--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link hovermenu" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../proyecto nuevo/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" aria-current="page" href="./pages/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="./pages/productos.html">Productos</a>
