agregando animaciones a las tarjetas y SEO

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https: //fonts.googleapis.com/css2? familia= Onest:wght@100;200;300;400;500;600;700;800;900 & display=swap" rel="stylesheet">
+    <meta name="description" content=" Aquí en DeepgamerX encontrarás todo lo que necesitas saber sobre el mundo gamer, desde los juegos más populares hasta lo más desconocido,">
+    <title>Mundo Gamer | Por Micahel Macero </title>
 </head>
 <body>
     <header>
