--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../Favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <meta name="description" content="Utiliza nuestros formularios de contacto para enviarnos un correo electrónico o déjanos un mensaje en nuestras redes sociales. También puedes encontrarnos en nuestras oficinas físicas si deseas una interacción más personal.">
+    <title>Contacto | Mundo Gamers </title>
 </head>
 <body>
 <header>
