--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michael_Boostrap</title>
+    <title>Michael_Final</title>
     <link rel="shortcut icon" href="../Favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https: //fonts.googleapis.com/css2? familia= Onest:wght@100;200;300;400;500;600;700;800;900 & display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <meta name="description" content="Descubre lo último en tecnología de hardware, desde potentes procesadores y tarjetas gráficas de vanguardia hasta discos duros de alta capacidad y dispositivos de almacenamiento ultrarrápidos.  y obtén consejos expertos para optimizar tu equipo existente.">
+    <title>Productos | Mundo Gamers </title>
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light barratop">
@@ -56,7 +58,7 @@
     <div class="row g-4">
         
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/4090.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Tarjeta de Video Gigabyte GeForce RTX­­ 4090 Aero OC 24G</p>
@@ -65,7 +67,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos//4080.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Tarjeta de Video Asus ROG Strix GeForce RTX 4080 16GB GDDR6X OC Edition, PCIe 4.0</p>
@@ -75,7 +77,7 @@
     
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/4070.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Tarjeta de Video MSI GeForce RTX 4070 TI Gaming Trio, 12GB GDDR6X, 192-bit, PCI-e 4.0.</p>
@@ -84,7 +86,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/fuente corsair.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Fuente De Poder Corsair HX1500i, 1500W, Certicada 80+ Plus Platinum, Full Modular</p>
@@ -93,7 +95,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/fuente de poder 750 gt.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Fuente de Poder EVGA SuperNOVA 750 GT, 750W, Full Modular, Certificación 80+ Plus Gold</p>
@@ -102,7 +104,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/DD5 rgb.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Memoria RAM Kingston FURY Beast RGB, 16GB, DDR5 5600MT/s, CL40 DIMM, Intel XMP</p>
@@ -111,7 +113,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/cooler master.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Gabinete Gamer Cooler Master COSMOS C700M Black Edition, Full Tower, Micro ATX, ATX, E-ATX</p>
@@ -120,7 +122,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/aero coll gabinete.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Gabinete Gamer Aerocool Mirage, Mid Tower, ABS+Vidrio Templado, ATX/micro ATX/mini-ITX</p>
@@ -129,7 +131,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/gabinete.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Gabinete Gamer Cooler Master HAF 700, Vidrio Templado, A-RGB, Full Tower, E-ATX, ATX, Micro-ATX</p>
@@ -138,7 +140,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/msi 660.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Placa Madre MSI Pro B650M-A WiFi, Socket AM5, Micro ATX, PCIe 4.0</p>
@@ -147,7 +149,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/ryzen 7.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Procesador AMD Ryzen 7 7700x, 4.5GHz, 8 Núcleos / 16 Hilos, Socket AM5, Sin Ventilador</p>
@@ -156,7 +158,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/ryzen 5.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Procesador AMD Ryzen 5 7600x, 4.7GHz, 6 Núcleos / 12 Hilos, Socket AM5, Sin Ventilador</p>
@@ -165,7 +167,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/disipador.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Enfriamiento Líquido AIO MSI MAG CORELIQUID C240, 240mm, 500-2000 RPM, Intel/AMD, RGB</p>
@@ -174,7 +176,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/ddr5 noteboock.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Memoria Ram DDR5 8GB 4800MHz, SO-DIMM, CL40, 1.1V Notebook</p>
@@ -183,7 +185,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/monito LG.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Monitor Gamer LG UltraGear de 27", Full HD, Panel IPS, 1ms, 144Hz, FreeSync Premium</p>
@@ -192,7 +194,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.> 
             <img class="imagentarjeta" src="../assest/imagenes productos/monitor odyseey.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Monitor Gamer Samsung Odyssey g7, 144Hz, 28'', IPS, 4K, G-Sync, 1ms</p>
@@ -201,7 +203,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/placa madre 670.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Placa Madre Asus Prime X670-P Wifi, AM5, DDR5, M.2, PCI-e 4.0</p>
@@ -210,7 +212,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/magenta.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Teclado Mecánico Inalámbrico Logitech PRO X TKL LIGHTSPEED, Switch GX Brown, Inglés, Magenta</p>
@@ -219,7 +221,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/tecaldo rgb.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Teclado Mecánico Inalámbrico Logitech PRO X TKL LIGHTSPEED, Switch GX Brown, Inglés, Black</p>
@@ -228,7 +230,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/teclado funny.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">eclado Mecánico Logitech Pop Keys con teclas Emoji, Wireless, Bluetooth LE, Cosmic, Español</p>
@@ -237,7 +239,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/disco fury.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Unidad SSD Kingston FURY Renegade, 4 TB, M.2 2280, NVMe, PCIe 4.0 x4, con Heatsink, PS5, PC</p>
@@ -246,7 +248,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/disco 1tb.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Unidad SSD Kingston SSDNow A400 960GB, 2.5", Lectura 500MB/s Escritura 450MB/s</p>
@@ -255,7 +257,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/ddr5 fury-2.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Mouse Inalambrico Logitech M280 Azul Wireless 2.4GHz 3 Botones, 1000DPI </p>
@@ -264,7 +266,7 @@
     </div>
 
     <div class=" col-6 col-lg-3 ">
-        <div class="tarjeta2 card1">
+        <div class="tarjeta2 card1" data-aos="zoom-in-up" data-aos-delay=»50″. data-aos-duration=»2000″.>
             <img class="imagentarjeta" src="../assest/imagenes productos/ddr5 fury-1.jpg" alt="">
             <h2 class="titulotarjeta">tarjeta prueba</h2>
             <p class="textotarjeta">Mouse Logitech Design Collection, Wireless, 3 Botones, 1000DPI, Edición POW</p>
@@ -299,4 +301,8 @@
 
     </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
     </body>
