--- a/pages/servicio_tecnico.html
+++ b/pages/servicio_tecnico.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../Favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <meta name="description" content="Confía en nosotros para tus necesidades de servicio técnico computacional y descubre la diferencia que puede hacer un equipo de expertos apasionados por la tecnología. ¡Te invitamos a explorar nuestros servicios y ponerte en contacto con nosotros hoy mismo!">
+    <title>Servicio Tecnico | Mundo Gamers </title>
 </head>
 <body>
 <header>
