--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../Favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <meta name="description" content="La ubicación es más que simples coordenadas en un mapa; es la conexión con un lugar  y su entorno. En DeepGamerX, te sumergirás en una experiencia única donde podrás descubrir los encantos de nuestra ubicación y todo lo que tiene para ofrecer.">
+    <title>Ubicacion | Mundo Gamers </title>
 </head>
 <body>
 <header>
