--- a/pages/productos.html
+++ b/pages/productos.html
@@ -275,10 +275,7 @@
     </div>
     </div>
     </div>
-
-
     </section>
-
     </main>
     
     <section>
@@ -286,7 +283,7 @@
     <footer class="fondofooter">
         <div class="container d-flex justify-content-between align-items-center">
         <div>
-            <img src="../assest/logo200.png" height="80px" alt="">
+            <a class="navbar-brand" href="../index.html"><img class="tamanologo" class="nav-link"  src="../assest/logo200.png" height="80px" alt=""></a>
         </div>
         <p class="text-white textfooter">&copy; 2023 Tu Sitio Web. Todos los derechos reservados.</p>
     <div>
