--- a/pages/404.html
+++ b/pages/404.html
@@ -48,8 +48,8 @@
     
 <main>
 
-            <div class="col-12 col-lg-12 ">
-                <img src="../assest/Error-404-2.jpg" alt="">
+            <div class="col-12 col-lg-8 container ">
+                <img src="../assest/error-404-Uup.jpg" alt="">
             </div>
 
 </main>
